trigger Jenkins build after code pushed to Github

--- a/automationexercise-postman/Jenkinsfile
+++ b/automationexercise-postman/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
   options { timestamps() }                 // prefix console logs with timestamps
 
   triggers {
-    githubPush()                          // 👈 Add this line
+    githubPush()                          // Add this line
   }
 
   parameters {
